--- a/5-infobox.html
+++ b/5-infobox.html
@@ -28,31 +28,30 @@
 		// Important Variables for Customization
 
 		// This should be the API key for your account when you sign up with Mapbox
-		var apiKey = 'pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw'
+		var apiKey = 'pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw';
 		// Here we create the map layers - in this case, a satellite layer
 		var layerIds = [
 			'satellite-streets-v10',
 			'light-v9',
-		]
+		];
 		// Here we define the names for the legend
 		var layerNames = [
 			'Satellite',
 			'Streets',
-		]
+		];
 		// This defines where the map is centered when the page is first shown
 		// NOTE! The coordinates are latitude first, then longitude second (latitudes should range from 0 to 90; longitudes should range from 180 to -180)
-		var center = [1.3417977, 103.9636011]
+		var center = [1.3417977, 103.9636011];
 		// This defines the zoom level of the map when the page is first shown
-		var zoom = 17
+		var zoom = 17;
 
 		// This is the attribution/reference data for Leaflet, OpenStreetMap and Mapbox, which appears at the bottom of the map
-		var attribution = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>'
+		var attribution = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>';
 
 		// The remaining part is to setup the Leaflet map using the variables above
 
 		// This actually adds the layer that we named above
 		var layers = layerIds.map((layerId, i) => {
-			
 			return L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/{style}/tiles/256/{z}/{x}/{y}?access_token={apiKey}',
 					{
 					maxZoom: 20, // maximum zoom
@@ -61,7 +60,7 @@
 					style: layerId,
 				}
 			)
-		})
+		});
 
 		// Here we create the map
 		// - we give it the layers
@@ -73,10 +72,10 @@
 		);
 		
 		// This creates the top right button to change between layers
-		var baseMaps = {}
+		var baseMaps = {};
 		layers.map((layer, i) => {
 			baseMaps[layerNames[i]] = layers[i]
-		})
+		});
 		L.control.layers(baseMaps).addTo(map);
 
 		var rectangle = {
@@ -159,7 +158,7 @@
 					}
 				}
 			]
-		}
+		};
 		// Placeholder for L.geoJson object
 		var geojson;
 		// Function to highlight the object when the mouse hovers over the shape
@@ -169,9 +168,9 @@
 				weight: 10,
 				fillOpacity: 1,
 			});
-			var infobox = document.getElementsByClassName('infobox')[0]
-			infobox.innerHTML = '<b>Shape No.</b></br>'
-			infobox.innerHTML += layer.feature.properties.number
+			var infobox = document.getElementsByClassName('infobox')[0];
+			infobox.innerHTML = '<b>Shape No.</b></br>';
+			infobox.innerHTML += layer.feature.properties.number;
 		}
 		// Function to reset the highlight when the mouse moves away from the shape
 		function resetHighlight(e) {
